<resources>
    <string name="app_name">My Masssenger</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="loging">Loging</string>
    <string name="sing_up">Sing up</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="what_s_is_the_mite">what\'s is the mite</string>
    <string name="useremail">useremail</string>
    <string name="message">Message</string>
</resources>