<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoingActivity2">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loginimage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:lottie_rawRes="@raw/login"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/email"

        app:endIconMode="clear_text"

        app:layout_constraintTop_toBottomOf="@id/loginimage"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        >

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/emaillogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordedt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/password"

        app:endIconMode="clear_text"

        app:layout_constraintTop_toBottomOf="@id/filledTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        >

        <com.google.android.material.textfield.TextInputEditText


            android:id="@+id/passwordlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/anton"
        android:text="@string/loging"
        android:textColor="#0C1519"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordedt"
        android:background="@drawable/edittextback"/>

    <TextView
        android:id="@+id/createnewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create New Account"
        app:layout_constraintTop_toBottomOf="@id/fon"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="7dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/anton"
        />




</androidx.constraintlayout.widget.ConstraintLayout>