<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/chatToolber1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EF991B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/profile_upload_image"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="5dp"
                />


            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="7dp"
                />

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/useremail"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintTop_toBottomOf="@id/username"
                android:layout_marginStart="7dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.Toolbar>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reycler"
        android:layout_width="match_parent"

        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chatToolber1"
        app:layout_constraintBottom_toTopOf="@id/edttextbottom"
        app:layout_constraintEnd_toEndOf="parent"
        />








    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edttextbottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"


        android:hint="@string/message"

        app:endIconMode="clear_text"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sentBtn"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="8dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtmassage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"

            />

    </com.google.android.material.textfield.TextInputLayout>



    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/sentBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sent_icon"
        app:layout_constraintStart_toEndOf="@id/edttextbottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="20dp"


        android:layout_marginBottom="20dp"



        />








</androidx.constraintlayout.widget.ConstraintLayout>